syntax = "proto3";

package proto;

option go_package = "swrc/proto/pb";

import "v1_comment.proto";

message FetchCommentsRequest {
	string id = 1;              
	string account_id = 2;       
	string snippet_topic_id = 3;  
	string parent_comment_id = 4; 
};

message FetchCommentsReply {
	repeated Comment comments = 1;
};